AC_INIT([PJDBC], [0.9], [http://www.pjdbc.org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([README])
AC_PROG_SED
AC_PROG_JAVAC
AC_PROG_JAR
AC_PROG_INSTALL
AC_CONFIG_FILES([
        Makefile
        doc/Makefile
        src/Makefile
        tests/Makefile])
AC_OUTPUT
