AC_INIT([PJDBC], [1.0], [http://www.pjdbc.org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIRS([m4])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([README])
AC_PROG_SED
AC_PROG_JAVAC
AC_PROG_JAVA
AC_PROG_JAR
AC_PROG_INSTALL
AC_ARG_VAR([CLASSPATH],[Java classpath])
AC_ARG_VAR([JAVACFLAGS],[The flags to pass to the Java compiler])
AC_CONFIG_FILES([
        Makefile
        doc/Makefile
        src/Makefile
        tests/Makefile])
AC_OUTPUT
